# WEB_HW8

./: .gitignore  connect.py  decors.py  main.py  models.py  pyproject.toml  seeds.py
PT1/: README.md  connect.py  decors.py  main.py  seeds.py
PT2/: README.md  consumer_email.py  consumer_phone.py  produser.py  seeds.py
PT2/source/: RABBIT_connect.py  config.ini  db_connect.py  models.py
